# Media-Effects-II

./: README.md
C++_Stuff/: Compile & Run C++ CMD Commands.txt
C++_Stuff/C++ OpenCV/: OLD c_cpp_properties.json
C++_Stuff/C++ OpenCV/3rd program/: CMakeLists.txt  main.cpp
C++_Stuff/C++ OpenCV/4th program/: main.cpp
C++_Stuff/C++ OpenCV/5th program/: CMakeLists.txt  Cmake CMD Steps.txt  main.cpp
C++_Stuff/C++ OpenCV/First Stuff!/: CMakeLists.txt  main.cpp
C++_Stuff/C++ OpenCV/ForFun/: CMakeLists NEW.txt  CMakeLists.txt  fun1 - Copy 10-25-2024 copy.cpp  fun1 copy 10-20-2024.cpp  fun1 new.cpp  fun1 no webcam.cpp  fun1.cpp  vcpkg.json
C++_Stuff/C++ Tutorial/: C++ Tutorial.code-workspace  Tutorial YouTube Link.txt
C++_Stuff/C++ Tutorial/1.2 Primitive Data Types & Variables/: primitives.cpp
C++_Stuff/C++ Tutorial/1.3 User Inputs & If Statements/: input.cpp
C++_Stuff/C++ Tutorial/1.4 Arithmetic Operators/: arithmetic.cpp
C++_Stuff/C++ Tutorial/1.5 Casting & Basic Strings/: strings.cpp  strings2.cpp  strings3.cpp  strings4.cpp
C++_Stuff/C++ Tutorial/1.6 Math & Logical Operators/: mathematics.cpp
C++_Stuff/C++ Tutorial/1.6(5) Random Numbers/: random_numbers.cpp
C++_Stuff/C++ Tutorial/2.1 How to Make Void Functions/: voidFunctions.cpp  voidFuntions2.cpp
C++_Stuff/C++ Tutorial/2.2 How to Use a For Loop/: forLoop.cpp
C++_Stuff/C++ Tutorial/2.3 While Loops & String Manipulation/: stringManipulation1.cpp  stringManipulation2.cpp  whileLoop.cpp
C++_Stuff/C++ Tutorial/2.4 Parameters, Arguments, and Returns/: parameters1.cpp  parameters2.cpp  parameters3.cpp
C++_Stuff/C++ Tutorial/2.5 C Arrays/: cArray_findMax.cpp  cArrays.cpp
C++_Stuff/C++ Tutorial/3.1 Pointers/: pointers1.cpp  pointers2.cpp  pointers3.cpp
C++_Stuff/C++ Tutorial/3.2 Classes/: classes1.cpp  classes2.cpp  classes3.cpp
C++_Stuff/C++ Tutorial/3.3 Header Files & Multi File Programming/: main.cpp  main.hpp  preposs.cpp
C++_Stuff/C++ Tutorial/3.3 Header Files & Multi File Programming/multi-file_program_2/: main.cpp  myclass.cpp  myclass.hpp
C++_Stuff/C++ Tutorial/3.3 Header Files & Multi File Programming/multi-file_programming/: main.cpp  myfile.cpp  myfile.hpp
C++_Stuff/C++ Tutorial/3.4 Classes Part II - Encapsulation, Static, Pointers/classesPart2_1_Static/: main.cpp  player.cpp  player.hpp
C++_Stuff/C++ Tutorial/3.4 Classes Part II - Encapsulation, Static, Pointers/classesPart2_2_Encapsulation/: main.cpp  player.cpp  player.hpp
C++_Stuff/C++ Tutorial/3.4 Classes Part II - Encapsulation, Static, Pointers/classesPart2_3_ClassPointers/: main.cpp  player.cpp  player.hpp
C++_Stuff/C++ Tutorial/3.5 Vectors, Maps, C Structs/C Structs/: main.cpp
C++_Stuff/C++ Tutorial/3.5 Vectors, Maps, C Structs/Maps/: main.cpp
C++_Stuff/C++ Tutorial/3.5 Vectors, Maps, C Structs/Vectors/: main.cpp
C++_Stuff/C++ Tutorial/3.6 File IO (Input Output)/FileIO/: FileIO.cpp  myText.txt
C++_Stuff/C++ Tutorial/4.1 Image Programming from Scratch/Apply Filter to Image/: filterImage.cpp
C++_Stuff/C++ Tutorial/4.1 Image Programming from Scratch/Basic Image Creation/: createImage.cpp  image.ppm
C++_Stuff/C++ Tutorial/4.1 Image Programming from Scratch/MiniLab/: 5_image_filters.cpp  filtered_image.ppm
C++_Stuff/C++ Tutorial/4.2 Wav Audio Programming From Scratch/Wav/: wav.cpp
C++_Stuff/C++ Tutorial/OLD VS CODE SETTINGS/: VS Code settings.txt  settings json.txt
C++_Stuff/C++ Tutorial/OLD VS CODE SETTINGS/PATH_environment_oldStuff/: old vs code thing in path environment variable.txt
C++_Stuff/C++ Tutorial/QuickCode-StudentClass/: Student_Data.txt  main.cpp  student.cpp  student.hpp
C++_Stuff/C++_Image_Processing_Tutorial/: Guy Who Made Part of The Library (Interesting).url  STB Header Libraries.url  Tutorial GitHub.url  Tutorial YouTube Playlist.url
C++_Stuff/C++_Image_Processing_Tutorial/1 - Setup/: image.cpp  image.h  main.cpp
C++_Stuff/C++_Image_Processing_Tutorial/2 - Grayscale/: grayscale.cpp  image.cpp  image.h
C++_Stuff/C++_Image_Processing_Tutorial/3 - Modifying the Color Channels/: color_mask.cpp  image.cpp  image.h
C++_Stuff/From_Matlab/Audio_Transform_Reconstructor/: CMakeListsOLD.txt  cmake thingy.txt
C++_Stuff/From_Matlab/Audio_Transform_Reconstructor/audio_reconstructor_dct/: CMakeCache.txt  CMakeLists.txt  ar_dct.cpp
C++_Stuff/From_Matlab/Bank Info Script/: AccountHistory.csv  BankAccountInfo.cpp
C++_Stuff/From_Matlab/Video_Transform_Reconstructor/: CMakeLists fun1.txt  CMakeLists.txt  Video_DCT.cpp  Video_DCT_image.cpp
C++_Stuff/Particle_Simulator/Particles_1/: CMakeLists.txt  particles_1.cpp
RaspberryPi/: send to rpi remotely.txt
RaspberryPi/Camera_Projects/RPi_0W/Camera_Effects/: address in rpi.txt  pi_camera_test.cpp  rpi_cam_effects1.cpp
RaspberryPi/Camera_Projects/RPi_4B/: rpi_cam_effects2.cpp
RaspberryPi/Camera_Projects/RPi_4B/test1/: test1.cpp
