cmake_minimum_required(VERSION 3.15)
project(OpenCVExample)

#
set(CMAKE_CXX_STANDARD 17)

# Find OpenCV package
find_package(OpenCV REQUIRED)

#Include directories from OpenCV
include_directories(${OpenCV_INCLUDE_DIRS})

# Create an executable
add_executable(OpenCVExample main.cpp)

#Link OpenCV libraries
target_link_libraries(OpenCVExample ${OpenCV_LIBS})